--- a/index.html
+++ b/index.html
@@ -95,17 +95,22 @@
           <div class="home__data grid">
             <h1 class="home__title">
               Hi, I'm Farhan Asyraaf <br />
-              Fresh Graduate <br />
+              Internship <br />
               Based In Malaysia <br />
             </h1>
 
             <div class="home__blob grid">
               <div class="home__perfil">
-                <img src="assets/img/paan.png" alt="home perfil" />
+                <div class="home__perfil-border">
+                  <div class="home__perfil-overlay">
+                    <img src="assets/img/paan.png" alt="home perfil" class="home__perfil-img" />
+                  </div>
+                </div>
               </div>  
-
-              <img src="assets/img/shape-wawes.svg" alt="" class="home__shape-wawes" />
-              <img src="assets/img/shape-circle.svg" alt="" class="home__shape-circle" />
+              <div class="home__decorative">
+                <img src="assets/img/shape-wawes.svg" alt="" class="home__shape-wawes" />
+                <img src="assets/img/shape-circle.svg" alt="" class="home__shape-circle" />
+              </div>
             </div>
 
             <ul class="home__social">
@@ -120,7 +125,7 @@
               <h3 class="home__info-title">BIOGRAPHY</h3>
               <p class="home__info-description">
                 Hi, I'm Farhan Asyraaf, <br />
-                Fresh Graduate. <br />
+                Internship. <br />
                 Passionate about Fullstack and Data Scientist. <br />
                 Based in Malaysia.
               </p>
@@ -298,6 +303,8 @@
               Education
             </h3>
 
+           
+
             <div class="qualification__info">
               <div>
                 <h3 class="qualification__name">Diploma In Computer Science</h3>
@@ -312,9 +319,10 @@
               </div>
 
               <div>
-                <h3 class="qualification__name">Sijil Pelajaran Malaysia</h3>
-                <span class="qualification__country">Fastrack - Tasik Biru, Malaysia</span>
-                <span class="qualification__year">2019</span>
+                <h3 class="qualification__name">Degree In Software Engineering </h3>
+                <h3 class="qualification__name">CGPA: 3.55</h3>
+                <span class="qualification__country">University Tenaga Nasional - Putrajaya, Malaysia</span>
+                <span class="qualification__year">October 2023 - Present</span>
               </div>
             </div>
           </div>
@@ -352,34 +360,19 @@
         <div class="container section__border">
           <div class="projects__container swiper">
             <div class="swiper-wrapper">
-              <!--==================== PROJECTS 1 ====================-->
-              <div class="projects__content swiper-slide">
-                <img src="assets/img/coffee.png" alt="projects image" class="projects__img" style="height: 220px" />
 
-                <div>
-                  <span class="pill">HTML</span>
-                  <span class="pill">CSS</span>
-                  <span class="pill">JavaScript</span> <br /><br />
-                  <h1 class="projects__title">Coffee Shop</h1>
-
-                  <a href="https://coffee-adin.netlify.app/" target="_blank" class="projects__button">
-                    View demo
-                    <i class="ri-arrow-right-line"></i>
-                  </a>
-                </div>
-              </div>
 
               <!--==================== PROJECTS 2 ====================-->
               <div class="projects__content swiper-slide">
-                <img src="assets/img/Hibiscus_Lab.png" alt="projects image" class="projects__img" style="height: 220px" />
+                <img src="assets/img/lvl17.png" alt="projects image" class="projects__img" style="height: 220px" />
 
                 <div>
                   <span class="pill">HTML</span>
                   <span class="pill">CSS</span>
                   <span class="pill">JavaScript</span> <br /><br />
-                  <h1 class="projects__title">Hibiscus Lab</h1>
+                  <h1 class="projects__title">Level 17 Capital</h1>
 
-                  <a href="https://www.biscus.my/home" target="_blank" class="projects__button">
+                  <a href="https://level17capital.com/" target="_blank" class="projects__button">
                     View demo
                     <i class="ri-arrow-right-line"></i>
                   </a>
@@ -388,92 +381,23 @@
 
               <!--==================== PROJECTS 3 ====================-->
               <div class="projects__content swiper-slide">
-                <img src="assets/img/ProjectPersonalPortfolio.png" alt="projects image" class="projects__img" style="height: 220px" />
+                <img src="assets/img/port.png" alt="projects image" class="projects__img" style="height: 220px" />
 
                 <div>
                   <span class="pill">HTML</span>
                   <span class="pill">CSS</span>
                   <span class="pill">JavaScript</span> <br /><br />
-                  <h1 class="projects__title">Personal Portfolio Website</h1>
+                  <h1 class="projects__title">Portfolio</h1>
 
-                  <a href="https://github.com/AdinRC/Personal-Portfolio-Adin" target="_blank" class="projects__button">
+                  <a href="https://level17capital.com/" target="_blank" class="projects__button">
                     View demo
                     <i class="ri-arrow-right-line"></i>
                   </a>
                 </div>
               </div>
+             
 
-              <!--==================== PROJECTS 4 ====================-->
-              <div class="projects__content swiper-slide">
-                <img src="assets/img/fypUniten.png" alt="projects image" class="projects__img" style="height: 220px" />
 
-                <div>
-                  <span class="pill">HTML</span>
-                  <span class="pill">CSS</span>
-                  <span class="pill">JavaScript</span>
-                  <span class="pill">Bootstrap 5</span> <br /><br />
-                  <span class="pill">Php</span>
-                  <span class="pill">Laravel</span>
-                  <span class="pill">Mysql</span> <br /><br />
-
-                  <h1 class="projects__title">FYP Uniten Sport Club</h1>
-
-                  <a href="https://github.com/AdinRC/FYP-SportClub-Uniten" target="_blank" class="projects__button">
-                    View demo
-                    <i class="ri-arrow-right-line"></i>
-                  </a>
-                </div>
-              </div>
-
-              <!--==================== PROJECTS 5 ====================-->
-              <div class="projects__content swiper-slide">
-                <img src="assets/img/ProjectEdar.png" alt="projects image" class="projects__img" style="height: 220px" />
-
-                <div>
-                  <span class="pill">HTML</span>
-                  <span class="pill">CSS</span>
-                  <span class="pill">JavaScript</span>
-                  <span class="pill">Bootstrap 5</span> <br /><br />
-                  <span class="pill">Php</span>
-                  <span class="pill">Laravel</span>
-                  <span class="pill">Mysql</span> <br /><br />
-                  <h1 class="projects__title">Legoom EDAR</h1>
-
-                  <a href="https://legoom.net/product/" target="_blank" class="projects__button">
-                    View demo
-                    <i class="ri-arrow-right-line"></i>
-                  </a>
-                </div>
-              </div>
-
-              <!--==================== PROJECTS 6 ====================-->
-              <div class="projects__content swiper-slide">
-                <img src="assets/img/ProjectHRMS.png" alt="projects image" class="projects__img" style="height: 220px" />
-
-                <div>
-                  <span class="pill">HTML</span>
-                  <span class="pill">CSS</span>
-                  <span class="pill">JavaScript</span>
-                  <span class="pill">Bootstrap 5</span> <br /><br />
-                  <span class="pill">Php</span>
-                  <span class="pill">Mysql</span> <br /><br />
-                  <h1 class="projects__title">Legoom HRMS</h1>
-
-                  <a href="https://legoom.net/product/" target="_blank" class="projects__button">
-                    View demo
-                    <i class="ri-arrow-right-line"></i>
-                  </a>
-                </div>
-              </div>
-            </div>
-
-            <!-- Swiper arrows -->
-            <div class="swiper-button-next">
-              <i class="ri-arrow-right-s-line"></i>
-            </div>
-            <div class="swiper-button-prev">
-              <i class="ri-arrow-left-s-line"></i>
-            </div>
 
             <!-- Swiper Pagination -->
             <div class="swiper-pagination"></div>
