--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
                   <span class="pill">JavaScript</span> <br /><br />
                   <h1 class="projects__title">Portfolio</h1>
 
-                  <a href="https://level17capital.com/" target="_blank" class="projects__button">
+                  <a href="https://portfolio-farhanasyraaf.netlify.app/" target="_blank" class="projects__button">
                     View demo
                     <i class="ri-arrow-right-line"></i>
                   </a>
