--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
               <p class="home__info-description">
                 Hi, I'm Farhan Asyraaf, <br />
                 Internship. <br />
-                Passionate about Fullstack and Data Scientist. <br />
+                Passionate about Fullstack and Data Analyst. <br />
                 Based in Malaysia.
               </p>
             </div>
