--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
               <div>
                 <h3 class="qualification__name">WEB DEVELOPER</h3>
                 <span class="qualification__country">Level 17 Capital Sdn. Bhd. - Kuala Lumpur, Malaysia</span>
-                <span class="qualification__year">June 2022 - Present</span>
+                <span class="qualification__year">June 2022</span>
               </div>
 
               <div>
